--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    android:layout_height="match_parent" android:fitsSystemWindows="false"
     tools:context=".MainActivity">
 
     <Button
@@ -45,4 +45,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="38dp"
         android:onClick="monsterButton" />
+
 </RelativeLayout>
