database can return info to stats

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,14 @@
         android:layout_marginBottom="38dp"
         android:onClick="monsterButton" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="setup"
+        android:id="@+id/setupBt"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp"
+        android:onClick="setupButton" />
+
 </RelativeLayout>
