--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -26,4 +26,11 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="72dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/playerEXP"
+        android:layout_below="@+id/playerName"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
