--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="false"
-    tools:context=".MainActivity">
+    android:paddingBottom ="16dp"
+    android:paddingLeft ="16dp"
+    android:paddingRight = "16dp"
+    android:paddingTop ="16dp"
+    tools:context=".MainActivity"
+    android:background="@drawable/bg1">
 
     <Button
         android:layout_width="wrap_content"
@@ -14,7 +19,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="85dp"
-        android:onClick="statsButton" />
+        android:onClick="statsButton"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        android:textColor="#2c435e" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,7 +33,8 @@
         android:layout_marginTop="88dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="45dp" />
+        android:textSize="45dp"
+        android:textColor="#fa0f0f"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -34,7 +43,10 @@
         android:id="@+id/button2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:onClick="fightButton" />
+        android:onClick="fightButton"
+        android:typeface="monospace"
+        android:textStyle="bold"
+        android:textColor="#2c435e" />
 
     <Button
         android:layout_width="wrap_content"
@@ -44,7 +56,10 @@
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="38dp"
-        android:onClick="monsterButton" />
+        android:onClick="monsterButton"
+        android:textStyle="bold"
+        android:textColor="#2c435e"
+        android:typeface="monospace" />
 
     <Button
         android:layout_width="wrap_content"
@@ -54,6 +69,9 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
-        android:onClick="setupButton" />
+        android:onClick="setupButton"
+        android:textColor="#2c435e"
+        android:textStyle="bold"
+        android:typeface="monospace" />
 
 </RelativeLayout>
