--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -3,16 +3,6 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/playerName"
-        android:layout_marginTop="43dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:editable="true" />
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,11 +16,11 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="72dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/playerEXP"
-        android:layout_below="@+id/playerName"
-        android:layout_centerHorizontal="true" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scrollingCache="false" />
 
 </RelativeLayout>
