--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -1,26 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:orientation="vertical">
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
         android:id="@+id/to_main"
-        android:layout_gravity="bottom"
-        android:clickable="false"
-        android:elegantTextHeight="false"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="72dp" />
+        android:layout_centerHorizontal="true" />
 
     <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
         android:id="@+id/listView"
+        android:layout_above="@+id/to_main"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Inventory"
+        android:id="@+id/textView4"
+        android:textSize="18dp"
+        android:layout_above="@+id/listView"
+        android:layout_centerHorizontal="true" />
+
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scrollingCache="false" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView4">
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Player Name"
+                android:id="@+id/name"
+                android:layout_column="1" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Job"
+                android:id="@+id/job"
+                android:layout_column="1" />
+        </TableRow>
+    </TableLayout>
 </RelativeLayout>
